feature(ai): Added ai feature in the requirements section when requesting documents and refined some ui for the whole system